--- a/index.html
+++ b/index.html
@@ -242,14 +242,13 @@
                                         <div class="bg-overlay"></div>
                                         <div class="v-border"></div>
                                         <div class="h-border"></div>
-                                        <div class="content">
+                                        <div class="content p-2">
                                             <div class="primary">
                                                 <h2>Darma Valley Tour Package</h2>
                                             </div>
                                             <div class="secondary">
                                                 <p> 6 Day / 5 Night </p>
-                                                <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh
-                                                    (Uttarakhand).</p>
+                                                <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh.</p>
                                                 <p>price : 21000 /- INR</p>
                                                 <a class="btn btn-success" href="Darma Vally.html">Join Us </a>
                                             </div>
@@ -259,15 +258,15 @@
                                         <div class="bg-overlay"></div>
                                         <div class="v-border"></div>
                                         <div class="h-border"></div>
-                                        <div class="content">
+                                        <div class="content p-2">
                                             <div class="primary">
                                                 <h2>Khaliya Top Tour Package </h2>
                                             </div>
                                             <div class="secondary">
 
                                                 <p> 6 Day / 5 Night </p>
-                                                <p> Khaliya Top is a meandering meadow surrounded by snowy peaks with
-                                                    view of kumaun.</p>
+                                                <p> Khuliya top is the best location for adventure lover.
+                                                   </p>
                                                 <p>price : 21000 /- INR</p>
                                                 <a class="btn btn-success" href="khalia-trek.html">Join Us </a>
                                             </div>
@@ -277,7 +276,7 @@
                                         <div class="bg-overlay"></div>
                                         <div class="v-border"></div>
                                         <div class="h-border"></div>
-                                        <div class="content">
+                                        <div class="content p-2">
                                             <div class="primary">
                                                 <h2>Chipla kedar Tour Package</h2>
                                             </div>
