--- a/Chiplakedar.html
+++ b/Chiplakedar.html
@@ -187,10 +187,10 @@
         </div>
     </section>
     <div class="row container my-2 p-2 Inclusions ">
-        <div class="col-sm-6 ">
+        <div class="col-sm-4 col-md-6 col-lg-4 ">
             <div class="card">
                 <div class="card-body">
-                    <h3 class="card-title">Inclusions :</h3>
+                    <h3 class="card-title text-center">Inclusions </h3>
                     <ul>
                         <li>Love , Support , Care with Blessing of Himalayas.</li>
                         <li>Transportation(Pick/Drop).</li>
@@ -201,16 +201,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4 col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-body">
-                    <h3 class="card-title"> Activities :</h3>
+                    <h3 class="card-title text-center"> Activities </h3>
                     <p class="card-text">
                     <ul>
                         <li>Bonfire.</li>
                         <li>Camping.</li>
                         <li>Trekking.</li>
                         <li>Sightseeing.</li>
+                        <li>Games.</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center"> Things To Carry </h3>
+                    <p class="card-text">
+                    <ul>
+                        <li>Warm Clothes.</li>
+                        <li>Comfortable Clothes.</li>
+                        <li>Comfortable Trekking Shoes with Good Grip.</li>
+                        <li>Personal And Basic medications (Or prescribed If Any) .</li>
                         <li>Games.</li>
                     </ul>
                     </p>
