--- a/about.html
+++ b/about.html
@@ -139,7 +139,8 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <h5>Contact</h5>
                     <ul class="list-unstyled quick-links">
-                        <li><i class="fa fa-map-marker-alt"></i>Bypass Road Near Ramlila Ground, Bhimtal 263136 India</li>
+                        <li><i class="fa fa-map-marker-alt"></i>Bypass Road Near Ramlila Ground, Bhimtal 263136 India
+                        </li>
                         <li><i class="fa fa-envelope"></i>Blissfulhimalaya@gmail.com</li>
                         <li><i class="fas fa-phone"></i>+91 7060391584, 7500768536</li>
                         <li><i class="fab fa-whatsapp"></i>+91 9411502365</li>
@@ -150,15 +151,20 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
                     <ul class="list-unstyled list-inline social text-center">
-                        <li class="list-inline-item"><a href="https://www.facebook.com/blissfulhimalayaofficial/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/blissfulhimalayaofficial/"
+                                target="_blank"><i class="fab fa-facebook-f"></i></a>
                         </li>
                         <!-- <li class="list-inline-item"><a href="#!" target="_blank"><i class="fab fa-youtube"></i></a> -->
                         </li>
-                        <li class="list-inline-item"><a href="https://instagram.com/blissfulhimalaya?igshid=1fnpe78m7q6im" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <li class="list-inline-item"><a
+                                href="https://instagram.com/blissfulhimalaya?igshid=1fnpe78m7q6im" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </li>
-                        <li class="list-inline-item"><a href="https://api.whatsapp.com/resolve/?deeplink=%2F9411502365" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <li class="list-inline-item"><a href="https://api.whatsapp.com/resolve/?deeplink=%2F9411502365"
+                                target="_blank"><i class="fab fa-whatsapp"></i></a>
                         </li>
-                        <li class="list-inline-item"><a href="blissfulhimalaya@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
+                        <li class="list-inline-item"><a href="blissfulhimalaya@gmail.com" target="_blank"><i
+                                    class="far fa-envelope"></i></a>
                         </li>
                     </ul>
                 </div>
