--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8">
                     <div id="aboutus">
-                        <p>Blissful himalaya is an group of youth from the Himalayas eager to build restful and very
+                        <p>Blissful himalaya is a group of youth from the Himalayas eager to build restful and very
                             interactive
                             tourism in rural Himalayan villages where the souls from all around the globe could unite
                             and laminate within and for a better world. We aim to eco tourism, medical tourism, farming
@@ -507,8 +507,28 @@
                         </div>
                     </div>
                 </article>
-                <a class="btn btn-success mx-auto" href="packages.html">More Packages</a>
+                <article class="fancy-card three">
+                    <div class="bg-overlay"></div>
+                    <div class="v-border"></div>
+                    <div class="h-border"></div>
+                    <div class="content">
+                        <div class="primary">
+                            <h2>Mallikarjun Mandir (Askote) Tour Package</h2>
+                        </div>
+                        <div class="secondary">
+
+                            <p> 11 Day / 10 Night </p>
+                            <p>Amazing Shivling on which cow surreptitiously offered its milk.
+                            </p>
+                            <p>price : 30,000 /- INR</p>
+                            <a class="btn btn-success" href="Mallikarjun mandir.html">Join Us </a>
+                        </div>
+                    </div>
+                </article>
+                <!-- End of card -->
+               <a class="btn btn-success " href="packages.html">More Packages</a>
             </section>
+            
         </div>
     </div>
     <!-- end -->
