--- a/packages.html
+++ b/packages.html
@@ -96,7 +96,7 @@
                             <p> 6 Day / 5 Night </p>
                             <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh
                                 (Uttarakhand).</p>
-                            <p>price : 21000 /- INR</p>
+                            <p>price : 21,000 /- INR</p>
                             <a class="btn btn-success" href="Darma Vally.html">Join Us </a>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <p> 6 Day / 5 Night </p>
                             <p> Khaliya Top is a meandering meadow surrounded by snowy peaks with
                                 view of kumaun.</p>
-                            <p>price : 21000 /- INR</p>
+                            <p>price : 21,000 /- INR</p>
                             <a class="btn btn-success" href="khalia-trek.html">Join Us </a>
                         </div>
                     </div>
@@ -133,8 +133,26 @@
                             <p>Chipla Keda is one of the most exciting and challenging trek of
                                 kumaun.
                             </p>
-                            <p>price : 25000 /- INR</p>
+                            <p>price : 25,000 /- INR</p>
                             <a class="btn btn-success" href="Chiplakedar.html">Join Us </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="fancy-card three">
+                    <div class="bg-overlay"></div>
+                    <div class="v-border"></div>
+                    <div class="h-border"></div>
+                    <div class="content">
+                        <div class="primary">
+                            <h2>Mallikarjun Mandir (Askote) Tour Package</h2>
+                        </div>
+                        <div class="secondary">
+
+                            <p> 11 Day / 10 Night </p>
+                            <p>Amazing Shivling on which cow surreptitiously offered its milk.
+                            </p>
+                            <p>price : 30,000 /- INR</p>
+                            <a class="btn btn-success" href="Mallikarjun mandir.html">Join Us </a>
                         </div>
                     </div>
                 </article>
