--- a/service.html
+++ b/service.html
@@ -86,10 +86,10 @@
                         <i class="fas fa-hiking fa-4x mx-auto"></i>
                     </div>
                     <div class="card-body text-success">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">Trekking</h5>
+                        <p class="card-text">Trekking is an outdoor activity of walking for more than a day. It is a
+                            form of walking, undertaken with the specific purpose of exploring and enjoying the scenery.
+                            ... </p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2"></i>
                         </div>
@@ -100,10 +100,9 @@
                         <i class="fas fa-shuttle-van fa-4x mx-auto"></i>
                     </div>
                     <div class="card-body text-success">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">Transportation</h5>
+                        <p class="card-text">Of all journeys, 20-40% are traveled by vehicle or on foot, with the
+                            highest percentage in the Munsyari valley and the lowest in munsyari . </p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
                         </div>
@@ -111,13 +110,13 @@
                 </div>
                 <div class="card border-success" style="max-width: 20rem;">
                     <div class="card-header-3">
-                        <i class="fas fa-tram fa-4x mx-auto"></i>
+                        <i class="fas fa-paw fa-4x mx-auto"></i>
                     </div>
                     <div class="card-body text-success">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">Wildlife</h5>
+                        <p class="card-text">Wildlife traditionally refers to undomesticated animal species, but has
+                            come to include all organisms that grow or live wild in an area without being introduced by
+                            humans. ... </p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
                         </div>
@@ -128,10 +127,9 @@
                         <i class="fas fa-spa fa-4x mx-auto"></i>
                     </div>
                     <div class="card-body text-success">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">Meditation</h5>
+                        <p class="card-text">Meditation isn't about becoming a different person, a new person, or even a
+                            better person. It's about training in awareness and getting a healthy sense of ...</p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
                         </div>
@@ -142,10 +140,11 @@
                         <i class="fas fa-hotel fa-4x mx-auto"></i>
                     </div>
                     <div class="card-body text-success">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">Accomdation</h5>
+                        <p class="card-text">Lodging refers to the renting of a short-term dwelling. People who travel
+                            and stay away from home for more than a day need lodging for sleep, rest, food, safety,
+                            shelter from cold temperatures or rain, storage of luggage and access to common household
+                            functions.</p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
                         </div>
@@ -153,13 +152,13 @@
                 </div>
                 <div class="card border-success" style="max-width: 20rem;">
                     <div class="card-header-6">
-                        <i class="fas fa-bed fa-4x mx-auto"></i>
+                        <i class="fas fa-seedling fa-4x mx-auto"></i>
                     </div>
                     <div class="card-body text-success">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">Eco</h5>
+                        <p class="card-text">Eco-friendly literally means earth-friendly or not harmful to the
+                            environment (see References 1). This term most commonly refers to products that contribute
+                            to green living or practices that help conserve resources like water and energy.</p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
                         </div>
