--- a/Mallikarjun mandir.html
+++ b/Mallikarjun mandir.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>blissful Himalaya | homestay and cultural </title>
+    <title>blissful Himalaya | Mallikarjun Temple Trek </title>
 </head>
 
 <body>
@@ -78,54 +78,123 @@
     <section id="About-us">
         <div class="container ">
             <h1>
-                Homestay And Cultural Tour
+                Mallikarjun Mandir Askote
             </h1>
-            <div id="carouselExampleIndicators" class="carousel slide pt-5" data-ride="carousel" >
-                <ol class="carousel-indicators">
-                  <!-- add extra indicator here for new image added -->
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <!-- add images here, their src in css -->
-                  <div class="carousel-item active">
-                      <img src="./images/image/alpine-resort-kmvn-is.jpg" alt="" class="things-slider">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./images/image/munsyari.jpg " alt="" class="things-slider">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./images/image/khaliya top.jpg" alt="" class="things-slider">
-                  </div>
-                  <div class="carousel-item ">
-                    <img src="./images/image/1.jpg " alt="" class="things-slider">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
             <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="container pb-4 mt-4">
+                        <div class="carousal2">
+                            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="images/image/1.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/image/trek.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/image/mun.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-12 mt-5">
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 pt-3">
                     <div id="aboutus">
-                        <h5 class="mb-5">Explore the Blissful Himalaya by living in Himalayan Homestay :-</h5>
-                        <p>Homestay at Munsyari (2000 rupey/Day)</p>
-                        <p>Homestay at Darma Valley (2000 rupey/Day)</p>
-                        <p>Homestay at Askote (2000 rupey/Day)</p>
-                        <p>Special Royal Homestay at Askote Only at 2000 rupey/Day</p>
+                        <p>There is such a Shivling in Pithoragarh in Uttarakhand, on which the milch cow used to offer
+                            its own milk. One of the two Jyotirlingas of Lord Shiva, this Shivling is known as Sri
+                            Mallikarjuna.</p>
 
-                        <p></p>
+                        <p>
+                            One of the two Jyotirlingas of Lord Shiva is known as Sri Mallikarjuna. It is second in the
+                            Jyotirlingas. Mallika means Mother Parvati and Arjuna means Shiva. The Sri Mallikarjuna
+                            Mahadev temple situated on the hill of Ascot of Agnok is a part of it. This religious place
+                            is the center of faith not only of the people of the border region of India, but also of the
+                            people of neighboring country Nepal.</p>
                     </div>
                 </div>
             </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <p> One of them milch cow used to go to a place secretly and offer its milk on its own. Gawale, who went
+                    with
+                    the cows, looked at him one day and was surprised. He saw that there was a self-effulgent Shivling,
+                    on which
+                    the cow was offering milk.</p>
+                <p>Through Gwale, when the news of this amazing incident came to the people living in the surrounding
+                    villages,
+                    the people got excited to see the Shivling. People started worshiping at this place since then.
+                    It is believed that a person gets relief from all his sufferings with the mere worship of this
+                    Shivling.
+                    Worshiping Mallikarjuna brings child and all happiness.</p>
+            </div>
+            <!-- <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div id="aboutus">
+                        <h3>Itinerary</h3>
+                        <p>
+                            <b>Start & End Point -: Haldwani ( Or as you wish)</br>
+                            </b></br>
+
+                            <b>Day 01 :</br>
+                                Drive Haldwani To Askote (250 Km by road):</b></br>
+                            Night stay at Askote.</br>
+
+                            <b>Day 02 :</br>
+                                Askote To Baram Baram To Kanar Village (14 Km Trek):</b></br>
+                            Night stay at Kanar.</br>
+
+                            <b>Day 03 :</br>
+                                Kanar Village to Bheman Camp Site: (Trek 10 Km) </b></br>
+
+
+
+                            <b>Day 04 :</br>
+                                Bheman Camp To Cherthi Camp (Trek 10 Km )</b></br>
+
+
+                            <b>Day 05 :</br>
+                                Cherthi Camp To Najarkote Top Cherthi Camp .</b></br>
+
+
+                            <b>Day 06 :</br>
+                                Cherthi Camp To Chiplakedar Temple To Chipla Kund and Other Lakes.</b></br>
+
+                            <b>Day 07 :</br>
+                                Cherthi Camp To Kanar Village. (Trek 20 KM )</b></br>
+
+                            <b>Day 08 :</br>
+                                Kanar Village To Askote . (Trek 14 KM )</b></br>
+
+                            <b>Day 09 :</br>
+                                Askote To Haldwani. (Trek 20 KM )</b></br>
+                        </p>
+                    </div>
+                </div>
+            </div> -->
         </div>
     </section>
     <div class="row container my-2 p-2 Inclusions ">
