--- a/wellness and spiritual.html
+++ b/wellness and spiritual.html
@@ -81,7 +81,38 @@
                 Wellness and Spiritual
             </h1>
             <div class="row">
-
+                <div id="carouselExampleIndicators" class="carousel slide pt-5" data-ride="carousel" >
+                    <ol class="carousel-indicators">
+                      <!-- add extra indicator here for new image added -->
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <!-- add images here, their src in css -->
+                      <div class="carousel-item active">
+                          <img src="./images/image/narayan.jpg" alt="" class="things-slider">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/image/narayan-ashram.jpg " alt="" class="things-slider">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/image/1533471142_narayan_ashram_2.jpeg" alt="" class="things-slider">
+                      </div>
+                      <div class="carousel-item ">
+                        <img src="./images/image/narayan-ashram.jpg " alt="" class="things-slider">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 mt-5">
                     <div id="aboutus">
                         <p> If you want to feel the bliss od Himalaya or Heal yourself by living
@@ -97,10 +128,10 @@
         </div>
     </section>
     <div class="row container my-2 p-2 Inclusions ">
-        <div class="col-sm-6 ">
+        <div class="col-sm-4 col-md-6 col-lg-4 ">
             <div class="card">
                 <div class="card-body">
-                    <h3 class="card-title">Inclusions :</h3>
+                    <h3 class="card-title text-center">Inclusions </h3>
                     <ul>
                         <li>Love , Support , Care with Blessing of Himalayas.</li>
                         <li>Transportation(Pick/Drop).</li>
@@ -111,16 +142,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4 col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-body">
-                    <h3 class="card-title"> Activities :</h3>
+                    <h3 class="card-title text-center"> Activities </h3>
                     <p class="card-text">
                     <ul>
                         <li>Bonfire.</li>
                         <li>Camping.</li>
                         <li>Trekking.</li>
                         <li>Sightseeing.</li>
+                        <li>Games.</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center"> Things To Carry </h3>
+                    <p class="card-text">
+                    <ul>
+                        <li>Warm Clothes.</li>
+                        <li>Comfortable Clothes.</li>
+                        <li>Comfortable Trekking Shoes with Good Grip.</li>
+                        <li>Personal And Basic medications (Or prescribed If Any) .</li>
                         <li>Games.</li>
                     </ul>
                     </p>
