update tour package

--- a/index.html
+++ b/index.html
@@ -301,21 +301,21 @@
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
                                     <img class="desinationImg" src="images/image/munsyari.jpg"
                                         style=" border-radius: 5%;" alt="">
-                                    <a class="text-muted" href="">
+                                    <a class="text-muted" href="packages.html">
                                         <p class=" text-center">Munsyari</p>
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
                                     <img class="desinationImg" src="images/image//mun.jpg" style=" border-radius: 5%;"
                                         alt="">
-                                    <a class="text-muted" href="">
+                                    <a class="text-muted" href="packages.html">
                                         <p class=" text-center">Askote</p>
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
                                     <img class="desinationImg" src="images/image/Darma vally.jpg"
                                         style=" border-radius: 5%;" alt="">
-                                    <a class="text-muted text" href="">
+                                    <a class="text-muted text" href="packages.html">
                                         <p class=" text-center">Pithoragarh</p>
                                     </a>
                                 </div>
