--- a/wellness and spiritual.html
+++ b/wellness and spiritual.html
@@ -78,8 +78,9 @@
     <section id="About-us">
         <div class="container ">
             <h1>
-                Wellness and Spiritual
+                Wellness and Spiritual Tour of Narayan Ashram (Dharchula)
             </h1>
+            <h3>(11 Days / 10 Night) </h3>
             <div class="row">
                 <div id="carouselExampleIndicators" class="carousel slide pt-5" data-ride="carousel" >
                     <ol class="carousel-indicators">
