--- a/Darma Vally.html
+++ b/Darma Vally.html
@@ -80,6 +80,7 @@
             <h1>
                 Darma Valley Trek
             </h1>
+            <h3>(6 Days / 5 Night) </h3>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6">
                     <div class="container pb-4 mt-4">
