--- a/Mallikarjun mandir.html
+++ b/Mallikarjun mandir.html
@@ -80,6 +80,7 @@
             <h1>
                 Mallikarjun Mandir Askote
             </h1>
+            <h3>(11 Days / 10 Night) </h3>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6">
                     <div class="container pb-4 mt-4">
