--- a/khalia-trek.html
+++ b/khalia-trek.html
@@ -84,6 +84,7 @@
             <h1>
                 Khaliya Top Trek
             </h1>
+            <h3>(6 Days / 5 Night) </h3>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6">
 
