--- a/Mallikarjun mandir.html
+++ b/Mallikarjun mandir.html
@@ -93,7 +93,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="images/image/1.jpg" class="d-block w-100" alt="...">
+                                        <img src="images/image/mallikarjun-temple-askot_1470306345.jpeg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
