--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="fancy-card three">
+                <article class="fancy-card four">
                     <div class="bg-overlay"></div>
                     <div class="v-border"></div>
                     <div class="h-border"></div>
