--- a/packages.html
+++ b/packages.html
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="fancy-card three">
+                <article class="fancy-card four">
                     <div class="bg-overlay"></div>
                     <div class="v-border"></div>
                     <div class="h-border"></div>
