--- a/index.html
+++ b/index.html
@@ -299,22 +299,25 @@
                             aria-labelledby="v-pills-messages-tab">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
+                                <a href="packages.html">
                                     <img class="desinationImg" src="images/image/munsyari.jpg"
-                                        style=" border-radius: 5%;" alt="" href="packages.html">
+                                        style=" border-radius: 5%;" alt=""></a>
                                     <a class="text-muted" href="packages.html">
                                         <p class=" text-center">Munsyari</p>
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
+                                    <a href="packages.html">
                                     <img class="desinationImg" src="images/image//mun.jpg" style=" border-radius: 5%;"
-                                        alt="" href="packages.html">
+                                        alt=""></a>
                                     <a class="text-muted" href="packages.html">
                                         <p class=" text-center">Askote</p>
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
+                                    <a href="packages.html">
                                     <img class="desinationImg" src="images/image/Darma vally.jpg"
-                                        style=" border-radius: 5%;" alt="" href="packages.html">
+                                        style=" border-radius: 5%;" alt="" href="packages.html"></a>
                                     <a class="text-muted text" href="packages.html">
                                         <p class=" text-center">Pithoragarh</p>
                                     </a>
