narayan ashram update

--- a/index.html
+++ b/index.html
@@ -528,6 +528,24 @@
                         </div>
                     </div>
                 </article>
+                <article class="fancy-card five">
+                    <div class="bg-overlay"></div>
+                    <div class="v-border"></div>
+                    <div class="h-border"></div>
+                    <div class="content">
+                        <div class="primary">
+                            <h2>Narayan Ashram (Askote) Tour Package</h2>
+                        </div>
+                        <div class="secondary">
+
+                            <p> 11 Day / 10 Night </p>
+                            <p>Narayan Ashram is situated at an elevation of 2734 metres in the Pithoragarh district.
+                            </p>
+                            <p>price : 30,000 /- INR</p>
+                            <a class="btn btn-success" href="Narayan ashram.html">Join Us </a>
+                        </div>
+                    </div>
+                </article>
                 <!-- End of card -->
                <a class="btn btn-success " href="packages.html">More Packages</a>
             </section>
