--- a/Narayan ashram.html
+++ b/Narayan ashram.html
@@ -15,12 +15,8 @@
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
-
-
-
     <link rel="stylesheet" href="css/style.css">
-    <title>blissful Himalaya</title>
+    <title>blissful Himalaya | Narayan Ashram Trek Dharchula </title>
 </head>
 
 <body>
@@ -62,6 +58,7 @@
         </div>
     </nav>
     <!-- end navbar -->
+
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -77,110 +74,119 @@
     </script>
     <!--End of Tawk.to Script-->
 
-    <!-- Trek Packeges -->
-    <div class="wrapper">
-        <div class="Contact my-5" id="Trek-Packages">
-            <h1 class="text-center">TREK PACKAGES</h1>
+    <!-- About-us -->
+    <section id="About-us">
+        <div class="container ">
+            <h1>
+                Narayan Ashram Trek Dharchula
+            </h1>
+            <h3>(11 Days / 10 Night) </h3>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="container pb-4 mt-4">
+                        <div class="carousal2">
+                            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="images/image/narayan-ashram.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/image/trek.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/image/mun.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 pt-3">
+                    <div id="aboutus">
+                        <p>The ashram was established by Narayan Swami in 1936, about 136 kms north of Pithoragarh and
+                            14 kms from Tawaghat. This spiritual cum socio educational centre is set at an altitude of
+                            2734 metres amidst scenic surroundings. It has a school for local children and imparts
+                            training to local youth. There is also a library, meditation room and samadhi sthal.</p>
+
+                        <p>
+                            The ashram organises various spiritual and social activities for its members. There are
+                            accommodation facilities available for 40 people at the ashram. The ashram remains closed
+                            during winters due to heavy snowfall.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <section class="cards cf">
-                <article class="fancy-card one">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Darma Valley Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-                            <p> 6 Day / 5 Night </p>
-                            <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh
-                                (Uttarakhand).</p>
-                            <p>price : 21,000 /- INR</p>
-                            <a class="btn btn-success" href="Darma Vally.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card two">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Khaliya Top Tour Package </h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 6 Day / 5 Night </p>
-                            <p> Khaliya Top is a meandering meadow surrounded by snowy peaks with
-                                view of kumaun.</p>
-                            <p>price : 21,000 /- INR</p>
-                            <a class="btn btn-success" href="khalia-trek.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card three">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Chipla kedar Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 9 Day / 8 Night </p>
-                            <p>Chipla Keda is one of the most exciting and challenging trek of
-                                kumaun.
-                            </p>
-                            <p>price : 25,000 /- INR</p>
-                            <a class="btn btn-success" href="Chiplakedar.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card four">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Mallikarjun Mandir (Askote) Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 11 Day / 10 Night </p>
-                            <p>Amazing Shivling on which cow surreptitiously offered its milk.
-                            </p>
-                            <p>price : 30,000 /- INR</p>
-                            <a class="btn btn-success" href="Mallikarjun mandir.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card five">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Narayan Ashram (Askote) Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 11 Day / 10 Night </p>
-                            <p>Narayan Ashram is situated at an elevation of
-                                2734 metres in the Pithoragarh district.
-                            </p>
-                            <p>price : 30,000 /- INR</p>
-                            <a class="btn btn-success" href="Narayan ashram.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <a class="btn btn-success mx-auto" href="packages.html">More Packages</a>
-            </section>
+    </section>
+    <div class="row container my-2 p-2 Inclusions ">
+        <div class="col-sm-4 col-md-6 col-lg-4 ">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center">Inclusions </h3>
+                    <ul>
+                        <li>Love , Support , Care with Blessing of Himalayas.</li>
+                        <li>Transportation(Pick/Drop).</li>
+                        <li>Accomedations(staying/camping).</li>
+                        <li>Fooding(All Meals/Water).</li>
+                        <li>Wildlife fee & Innerline permits.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center"> Activities </h3>
+                    <p class="card-text">
+                    <ul>
+                        <li>Bonfire.</li>
+                        <li>Camping.</li>
+                        <li>Trekking.</li>
+                        <li>Sightseeing.</li>
+                        <li>Games.</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center"> Things To Carry </h3>
+                    <p class="card-text">
+                    <ul>
+                        <li>Warm Clothes.</li>
+                        <li>Comfortable Clothes.</li>
+                        <li>Comfortable Trekking Shoes with Good Grip.</li>
+                        <li>Personal And Basic medications (Or prescribed If Any) .</li>
+                        <li>Games.</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-
-    <!-- Footer -->
     <!-- Footer -->
     <section id="footer" class="bg-success">
         <div class="container">
