--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4">
                     <div>
-                        <img src="images/2.jpg" alt="images" height="auto" width="100%">
+                        <img src="images/android-chrome-512x512.png" alt="images" height="auto" width="100%">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8">
