--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <meta name="keyword"
+        content="blissfulhimalaya.com, BLISSFULHIMALAYA.COM, blissfulHimalaya, blissful, blissfulhimalayaofficial, tourism , Uttarakhand , tourism company in Uttarakhand,
+    trekking, best place to visit in Uttarakhand, Pithoragarh, munsyari, Askote, chipla-kedar-trek, Darma, darma valley, Mallikarjun mandir, temples,
+    camping, best views, adventure, religious,medical tourism, farming tourism, adventure, culture and nature, rural , himalaya, himalayan, travel, village ">
+    <meta name="description" content="Blissful himalaya is a group of youth from the Himalayas eager to build restful and very interactive tourism in rural Himalayan villages where the souls from all around the globe could unite and laminate within and for a better world. We aim to eco tourism, 
+    medical tourism, farming tourism, adventure, culture and nature all together for the best travelling experiences for people who care.  for more information contact +91 7060391584, 7500768536 ,9411502365">
+   
+     <!-- favicon -->
+
+    <link rel=" apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="images/png" href="/images/favicon.ico">
@@ -266,7 +274,7 @@
 
                                                 <p> 6 Day / 5 Night </p>
                                                 <p> Khuliya top is the best location for adventure lover.
-                                                   </p>
+                                                </p>
                                                 <p>price : 21000 /- INR</p>
                                                 <a class="btn btn-success" href="khalia-trek.html">Join Us </a>
                                             </div>
@@ -299,25 +307,25 @@
                             aria-labelledby="v-pills-messages-tab">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
-                                <a href="packages.html">
-                                    <img class="desinationImg" src="images/image/munsyari.jpg"
-                                        style=" border-radius: 5%;" alt=""></a>
+                                    <a href="packages.html">
+                                        <img class="desinationImg" src="images/image/munsyari.jpg"
+                                            style=" border-radius: 5%;" alt=""></a>
                                     <a class="text-muted" href="packages.html">
                                         <p class=" text-center">Munsyari</p>
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
                                     <a href="packages.html">
-                                    <img class="desinationImg" src="images/image//mun.jpg" style=" border-radius: 5%;"
-                                        alt=""></a>
+                                        <img class="desinationImg" src="images/image//mun.jpg"
+                                            style=" border-radius: 5%;" alt=""></a>
                                     <a class="text-muted" href="packages.html">
                                         <p class=" text-center">Askote</p>
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-3 mx-auto">
                                     <a href="packages.html">
-                                    <img class="desinationImg" src="images/image/Darma vally.jpg"
-                                        style=" border-radius: 5%;" alt="" href="packages.html"></a>
+                                        <img class="desinationImg" src="images/image/Darma vally.jpg"
+                                            style=" border-radius: 5%;" alt="" href="packages.html"></a>
                                     <a class="text-muted text" href="packages.html">
                                         <p class=" text-center">Pithoragarh</p>
                                     </a>
@@ -547,9 +555,9 @@
                     </div>
                 </article>
                 <!-- End of card -->
-               <a class="btn btn-success " href="packages.html">More Packages</a>
+                <a class="btn btn-success " href="packages.html">More Packages</a>
             </section>
-            
+
         </div>
     </div>
     <!-- end -->
@@ -694,10 +702,8 @@
         <h1 class="text-center">CONTACT US</h1>
 
         <div class="container col-md-10 mx-auto">
-            <form class="row g-3 needs-validation" novalidate action="mailto:gajjida@gmail.com" method="post" enctype="multipart/form-data"
-
-
-            name="EmailForm">
+            <form class="row g-3 needs-validation" novalidate action="mailto:gajjida@gmail.com" method="post"
+                enctype="multipart/form-data" name="EmailForm">
                 <div class="col-md-6">
                     <label for="validationCustom01" class="form-label">First name</label>
                     <input type="text" class="form-control" id="validationCustom01" value="" required>
@@ -755,7 +761,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <button class="btn btn-outline-success mb-3" type="submit" >Submit form</button>
+                    <button class="btn btn-outline-success mb-3" type="submit">Submit form</button>
                 </div>
             </form>
         </div>
