--- a/homestay and cultural .html
+++ b/homestay and cultural .html
@@ -2,8 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword"
+        content="blissfulhimalaya.com, BLISSFULHIMALAYA.COM, blissfulHimalaya, blissful, blissfulhimalayaofficial, tourism , Uttarakhand , tourism company in Uttarakhand,
+    trekking, best place to visit in Uttarakhand, Pithoragarh, munsyari, Askote, chipla-kedar-trek, Darma, darma valley, Mallikarjun mandir, temples,
+    camping, best views, adventure, religious,medical tourism, farming tourism, adventure, culture and nature, rural , himalaya, himalayan, travel, village ">
+    <meta name="description" content="Blissful himalaya is a group of youth from the Himalayas eager to build restful and very interactive tourism in rural Himalayan villages where the souls from all around the globe could unite and laminate within and for a better world. We aim to eco tourism, 
+    medical tourism, farming tourism, adventure, culture and nature all together for the best travelling experiences for people who care.  for more information contact +91 7060391584, 7500768536 ,9411502365">
+   
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
